--- a/src/debug/jtag/widgets/sidebar/public/sidebar-widget.scss
+++ b/src/debug/jtag/widgets/sidebar/public/sidebar-widget.scss
@@ -25,12 +25,23 @@
 // Dynamic widgets - flex to fill remaining space
 .widget-slot--dynamic {
   flex: 1;
-  min-height: 100px;
   display: flex;
   flex-direction: column;
   overflow: hidden;
 
-  // Child widgets fill their container
+  > * {
+    flex: 1;
+    min-height: 0;
+  }
+}
+
+// Last persistent slot should flex to fill remaining space
+.widget-slot--persistent:last-child {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+
   > * {
     flex: 1;
     min-height: 0;
